--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     font-family: Arial;
     border: border-box;
 }
+/* header*/
 .navbar{
     height: 60px;
     background-color: #0f1111;
@@ -27,6 +28,9 @@
 .border:hover{
     border: 1.5px solid white;
 }
+.nav-address{
+    padding: 5px;
+}
 .add-first{
     font-size: 0.85rem;
     margin-left: 15px;
@@ -45,8 +49,12 @@
     width: 620px;
     height: 40px;
     background-color: #0f1111;
-    border: 4px;
     margin-left: 10px;
+}
+.nav-search:hover{
+    border: 2px solid orange;
+    border-radius: 6px;
+
 }
 .nav-select{
     border-top-left-radius: 4px;
@@ -71,4 +79,20 @@
     border-top-right-radius: 4px;
     border-bottom-right-radius: 4px;
     border: none;
+    font-size: 1.2rem;
+}
+span{
+    font-size: 0.7rem;
+
+}
+.nav-sec{
+    font-size: 0.8ram;
+    font-weight: 600;
+}
+.nav-cart i{
+    font-size: 25px;
+}
+.nav-cart{
+    font-size: 0.8ram;
+    font-weight: 600;
 }
