--- a/style.css
+++ b/style.css
@@ -182,3 +182,61 @@ span{
 .box-conten p{
     color: #007185;
 }
+footer{
+    margin-top: 15px;
+}
+.foot-panal1{
+    height: 40px;
+    background-color: #37475a;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 0.85rem;
+}
+.foot-panal2{
+    height: 330px;
+    background-color: #222f3d;
+    color: white;
+    display: flex;
+    justify-content: space-evenly;
+    
+}
+ul a{
+    display: block;
+    font-size: 0.85rem;
+    margin-top: 10px;
+    color: #DDDDDD;
+
+}
+ul{
+    margin-top: 25px;
+}
+.foot-panal3{
+    background-color: #222f3d;
+    border-top: 1px solid white;
+    height: 70px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.logo{
+    background-image: url("amazon_logo.png");
+    background-size: cover;
+    height: 50px;
+    width: 100px;
+}
+.foot-panal4{
+    background-color: #0f1111;
+    color: white;
+    height: 50px;
+    text-align: center;
+    font-size: 0.7rem;
+    padding-top: 15px;
+}
+.pages a{
+    margin-left: 10px;
+}
+.copyright{
+    padding-top: 5px;
+}
