--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 *{
     margin: 0;
-    font-family: Arial;
+    font-family: 'Times New Roman', Times, serif;
     border: border-box;
 }
 /* header*/
@@ -17,7 +17,7 @@
     width: 100px;
 }
 .logo{
-    background-image: url("amazon_logo.png");
+    background-image: url("image/amazon_logo.png");
     background-size: cover;
     height: 50px;
     width: 100%;
@@ -123,7 +123,7 @@ span{
 }
 /* body */
 .main-section{
-    background-image: url("hero_image.jpg");
+    background-image: url("image/hero_image.jpg");
     height: 300px;
     background-size: cover;
     font-size: 0.85rem;
@@ -221,7 +221,7 @@ ul{
     align-items: center;
 }
 .logo{
-    background-image: url("amazon_logo.png");
+    background-image: url("image/amazon_logo.png");
     background-size: cover;
     height: 50px;
     width: 100px;
